Kubernetes-files/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: three-tier
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    #alb.ingress.kubernetes.io/backend-protocol: http
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:844646036290:certificate/7b24fdc6-5c12-404e-b9a1-0b25cc0bffa5
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb # this is a application load balancer in AWS
  rules:
    - http:
        paths:
          - path: /result
            pathType: Prefix
            backend:
              service:
                name: result-app
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote-app
                port:
                  number: 8080
